# Laba3-4

./: .travis.yml  CMakeLists.txt  README.md
ArrList/: CMakeLists.txt  arrlist_main.cpp
ArrListLib/: ArrList.h  CMakeLists.txt  Queue.h
ArrListTest/: CMakeLists.txt  test_arrlist.cpp
MultiStack/: CMakeLists.txt  multistack_main.cpp
MultiStackLib/: CMakeLists.txt  MultiStack.h  NewStack.h
MultiStackTest/: CMakeLists.txt  test_multistack.cpp
Queue/: CMakeLists.txt  queue_main.cpp
QueueLib/: CMakeLists.txt  Queue.cpp  Stack.cpp  Stack.h
QueueTest/: CMakeLists.txt  test_queue.cpp
Stack/: CMakeLists.txt  stack_main.cpp
StackLib/: CMakeLists.txt
StackTest/: CMakeLists.txt  test_stack.cpp
Stecklib/: CMakeLists.txt
main/: CMakeLists.txt
test/: CMakeLists.txt
